[gd_scene load_steps=7 format=3 uid="uid://c4iqa1yq7o2si"]

[ext_resource type="Script" path="res://menu.gd" id="1_v2mss"]
[ext_resource type="FontFile" uid="uid://cuty68u3dwcvw" path="res://Sprite/Free/Menu/Text/Minecraft.ttf" id="3_30f7u"]
[ext_resource type="PackedScene" uid="uid://qfq5gmycu0pb" path="res://background.tscn" id="3_c453a"]
[ext_resource type="Texture2D" uid="uid://kb5aau85qsy5" path="res://Sprite/Free/Jungle Asset Pack/jungle tileset/jungle tileset.png" id="4_wd6lb"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_fifih"]
texture = ExtResource("4_wd6lb")
19:1/0 = 0
21:1/0 = 0
25:1/0 = 0
27:1/0 = 0
36:1/0 = 0
38:1/0 = 0
41:1/0 = 0
43:1/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
10:2/0 = 0
11:2/0 = 0
13:2/0 = 0
15:2/0 = 0
19:2/0 = 0
21:2/0 = 0
25:2/0 = 0
27:2/0 = 0
35:2/0 = 0
36:2/0 = 0
37:2/0 = 0
38:2/0 = 0
39:2/0 = 0
41:2/0 = 0
42:2/0 = 0
43:2/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
10:3/0 = 0
11:3/0 = 0
15:3/0 = 0
19:3/0 = 0
20:3/0 = 0
21:3/0 = 0
23:3/0 = 0
24:3/0 = 0
25:3/0 = 0
26:3/0 = 0
27:3/0 = 0
28:3/0 = 0
29:3/0 = 0
36:3/0 = 0
38:3/0 = 0
41:3/0 = 0
43:3/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
19:4/0 = 0
20:4/0 = 0
21:4/0 = 0
25:4/0 = 0
26:4/0 = 0
27:4/0 = 0
35:4/0 = 0
36:4/0 = 0
37:4/0 = 0
38:4/0 = 0
39:4/0 = 0
41:4/0 = 0
42:4/0 = 0
43:4/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
15:5/0 = 0
19:5/0 = 0
20:5/0 = 0
21:5/0 = 0
23:5/0 = 0
24:5/0 = 0
25:5/0 = 0
26:5/0 = 0
27:5/0 = 0
28:5/0 = 0
29:5/0 = 0
36:5/0 = 0
38:5/0 = 0
41:5/0 = 0
43:5/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
10:6/0 = 0
11:6/0 = 0
15:6/0 = 0
19:6/0 = 0
21:6/0 = 0
25:6/0 = 0
27:6/0 = 0
10:7/0 = 0
11:7/0 = 0
19:7/0 = 0
21:7/0 = 0
25:7/0 = 0
27:7/0 = 0
33:7/0 = 0
34:7/0 = 0
35:7/0 = 0
36:7/0 = 0
37:7/0 = 0
41:7/0 = 0
42:7/0 = 0
43:7/0 = 0
44:7/0 = 0
45:7/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
16:8/0 = 0
17:8/0 = 0
34:8/0 = 0
36:8/0 = 0
41:8/0 = 0
42:8/0 = 0
43:8/0 = 0
44:8/0 = 0
45:8/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
15:9/0 = 0
16:9/0 = 0
17:9/0 = 0
18:9/0 = 0
20:9/0 = 0
21:9/0 = 0
22:9/0 = 0
23:9/0 = 0
24:9/0 = 0
25:9/0 = 0
26:9/0 = 0
29:9/0 = 0
30:9/0 = 0
31:9/0 = 0
33:9/0 = 0
34:9/0 = 0
35:9/0 = 0
36:9/0 = 0
37:9/0 = 0
41:9/0 = 0
42:9/0 = 0
44:9/0 = 0
45:9/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
10:10/0 = 0
11:10/0 = 0
15:10/0 = 0
16:10/0 = 0
17:10/0 = 0
18:10/0 = 0
22:10/0 = 0
23:10/0 = 0
24:10/0 = 0
29:10/0 = 0
31:10/0 = 0
41:10/0 = 0
42:10/0 = 0
43:10/0 = 0
44:10/0 = 0
45:10/0 = 0
10:11/0 = 0
11:11/0 = 0
16:11/0 = 0
17:11/0 = 0
20:11/0 = 0
21:11/0 = 0
22:11/0 = 0
23:11/0 = 0
24:11/0 = 0
25:11/0 = 0
26:11/0 = 0
29:11/0 = 0
30:11/0 = 0
31:11/0 = 0
41:11/0 = 0
42:11/0 = 0
43:11/0 = 0
44:11/0 = 0
45:11/0 = 0
12:13/0 = 0
13:13/0 = 0
14:13/0 = 0
15:13/0 = 0
16:13/0 = 0
17:13/0 = 0
19:13/0 = 0
20:13/0 = 0
22:13/0 = 0
23:13/0 = 0
24:13/0 = 0
27:13/0 = 0
28:13/0 = 0
30:13/0 = 0
31:13/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
12:14/0 = 0
13:14/0 = 0
14:14/0 = 0
15:14/0 = 0
16:14/0 = 0
17:14/0 = 0
19:14/0 = 0
20:14/0 = 0
22:14/0 = 0
23:14/0 = 0
24:14/0 = 0
26:14/0 = 0
27:14/0 = 0
28:14/0 = 0
30:14/0 = 0
31:14/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
10:15/0 = 0
12:15/0 = 0
13:15/0 = 0
16:15/0 = 0
17:15/0 = 0
22:15/0 = 0
23:15/0 = 0
24:15/0 = 0
26:15/0 = 0
27:15/0 = 0
44:15/0 = 0
12:16/0 = 0
13:16/0 = 0
16:16/0 = 0
17:16/0 = 0
31:16/0 = 0
34:16/0 = 0
35:16/0 = 0
37:16/0 = 0
38:16/0 = 0
43:16/0 = 0
44:16/0 = 0
45:16/0 = 0
12:17/0 = 0
13:17/0 = 0
14:17/0 = 0
15:17/0 = 0
16:17/0 = 0
17:17/0 = 0
19:17/0 = 0
21:17/0 = 0
22:17/0 = 0
23:17/0 = 0
25:17/0 = 0
26:17/0 = 0
27:17/0 = 0
30:17/0 = 0
31:17/0 = 0
32:17/0 = 0
34:17/0 = 0
35:17/0 = 0
36:17/0 = 0
37:17/0 = 0
38:17/0 = 0
42:17/0 = 0
43:17/0 = 0
44:17/0 = 0
45:17/0 = 0
46:17/0 = 0
12:18/0 = 0
13:18/0 = 0
14:18/0 = 0
15:18/0 = 0
16:18/0 = 0
17:18/0 = 0
25:18/0 = 0
27:18/0 = 0
31:18/0 = 0
35:18/0 = 0
36:18/0 = 0
37:18/0 = 0
43:18/0 = 0
44:18/0 = 0
45:18/0 = 0
25:19/0 = 0
26:19/0 = 0
27:19/0 = 0
34:19/0 = 0
35:19/0 = 0
36:19/0 = 0
37:19/0 = 0
38:19/0 = 0
44:19/0 = 0
34:20/0 = 0
35:20/0 = 0
37:20/0 = 0
38:20/0 = 0

[sub_resource type="TileSet" id="TileSet_bm1a5"]
sources/0 = SubResource("TileSetAtlasSource_fifih")

[node name="Menu" type="Node2D"]
position = Vector2(-1, 0)
script = ExtResource("1_v2mss")

[node name="DinoGame" type="Label" parent="."]
offset_left = 368.0
offset_top = 143.0
offset_right = 814.0
offset_bottom = 226.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.4774, 0.714539, 0.322599, 1)
theme_override_constants/outline_size = 23
theme_override_fonts/font = ExtResource("3_30f7u")
theme_override_font_sizes/font_size = 60
text = "The Dino Game"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_left = 464.0
offset_top = 249.0
offset_right = 714.0
offset_bottom = 629.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 70)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_30f7u")
theme_override_font_sizes/font_size = 40
text = "Play"

[node name="Options2" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 70)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_30f7u")
theme_override_font_sizes/font_size = 40
text = "Options
"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 70)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_30f7u")
theme_override_font_sizes/font_size = 40
text = "Quit
"

[node name="Background" parent="." instance=ExtResource("3_c453a")]

[node name="TileMap" type="TileMap" parent="."]
scale = Vector2(3, 3)
tile_set = SubResource("TileSet_bm1a5")
format = 2
layer_0/tile_data = PackedInt32Array(851967, 327680, 2, 917503, 393216, 3, 786432, 393216, 2, 851968, 393216, 3, 786433, 458752, 2, 851969, 393216, 3, 786434, 327680, 2, 851970, 393216, 3, 786435, 393216, 2, 851971, 393216, 3, 786436, 458752, 2, 851972, 393216, 3, 786437, 327680, 2, 851973, 393216, 3, 786438, 393216, 2, 851974, 393216, 3, 786439, 458752, 2, 851975, 393216, 3, 786440, 327680, 2, 851976, 393216, 3, 786441, 393216, 2, 851977, 393216, 3, 786442, 458752, 2, 851978, 393216, 3, 786443, 327680, 2, 851979, 393216, 3, 786444, 393216, 2, 851980, 393216, 3, 786445, 458752, 2, 851981, 393216, 3, 786446, 327680, 2, 851982, 393216, 3, 786447, 393216, 2, 851983, 393216, 3, 786448, 458752, 2, 851984, 393216, 3, 786449, 327680, 2, 851985, 393216, 3, 786450, 393216, 2, 851986, 393216, 3, 786451, 458752, 2, 851987, 393216, 3, 786452, 327680, 2, 851988, 393216, 3, 786453, 393216, 2, 851989, 393216, 3, 786454, 458752, 2, 851990, 393216, 3, 786455, 327680, 2, 851991, 393216, 3, 786456, 393216, 2, 851992, 393216, 3, 786457, 458752, 2, 851993, 393216, 3, 786458, 327680, 2, 851994, 393216, 3, 786459, 393216, 2, 851995, 393216, 3, 786460, 458752, 2, 851996, 393216, 3, 786461, 327680, 2, 851997, 393216, 3, 786462, 393216, 2, 851998, 393216, 3, 786463, 458752, 2, 851999, 393216, 3, 786464, 327680, 2, 852000, 393216, 3, 786465, 393216, 2, 852001, 393216, 3, 786466, 458752, 2, 852002, 393216, 3, 786467, 327680, 2, 852003, 393216, 3, 786468, 393216, 2, 852004, 393216, 3, 786469, 458752, 2, 852005, 393216, 3, 786470, 327680, 2, 852006, 393216, 3, 786471, 393216, 2, 852007, 393216, 3, 786472, 458752, 2, 852008, 393216, 3, 786473, 327680, 2, 852009, 393216, 3, 786474, 393216, 2, 852010, 393216, 3, 786475, 458752, 2, 852011, 393216, 3, 786476, 327680, 2, 852012, 393216, 3, 786477, 393216, 2, 852013, 393216, 3, 786478, 458752, 2, 852014, 393216, 3, 786479, 327680, 2, 852015, 393216, 3, 786480, 393216, 2, 852016, 393216, 3, 786481, 458752, 2, 852017, 393216, 3)

[connection signal="pressed" from="MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Options2" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
